Bug 405597 - Uninformative error message in KCrash when overwriting stacktrace
Summary: Uninformative error message in KCrash when overwriting stacktrace
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.14.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 355087 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-03-18 13:31 UTC by Mike Krutov
Modified: 2019-07-03 12:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.1
Sentry Crash Report:


Attachments
demonstrating the issue (11.50 KB, image/png)
2019-03-18 13:31 UTC, Mike Krutov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Krutov 2019-03-18 13:31:20 UTC
Created attachment 118880 [details]
demonstrating the issue

SUMMARY


STEPS TO REPRODUCE
1. Generate stacktrace from crash
2. Save it
3. Save it again, using same file name; tick overwrite.

OBSERVED RESULT
Just a window with file path and yellow exclamation sign

EXPECTED RESULT
Actual error message (or in this case, as file has write permissions, no error message & file being overwritten)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.55.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
Comment 1 Mike Krutov 2019-03-18 14:15:03 UTC
I think I've messed up with the component, reassigning to drkonqi.
Comment 2 Patrick Silva 2019-04-17 00:18:12 UTC
Reproducible on Arch Linux running plasma 5.15.4.
Comment 3 Harald Sitter 2019-06-07 13:29:02 UTC
Git commit 0d35055d867acd8c2a7db4d13cf9bd13d18fe558 by Harald Sitter.
Committed on 07/06/2019 at 12:19.
Pushed by sitter into branch 'Plasma/5.16'.

copy backtrace file with overwrite flag

Summary:
QFileDialog was already run with confirmOverwrite, but we didn't actually
set the Overwrite flag on the copy call, so we got an error back when
the file already existed. Since the user already needed to confirm the
overwrite in the QFD we can always pass Overwrite.
CHANGELOG: Saving backtraces now overwrites files when necessary
FIXED-IN: 5.16.1

Test Plan:
- save backtrace
- save again
- dialog asks to confirm overwrite
- gets overwritten succesfully

- save again
- refuse to overwrite
- dialog stays open until cancel or new path is chosen
- no overwrite

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21645

M  +6    -1    src/drkonqi.cpp

https://commits.kde.org/drkonqi/0d35055d867acd8c2a7db4d13cf9bd13d18fe558
Comment 4 Harald Sitter 2019-06-07 13:29:04 UTC
Git commit c8f8b9d962eb7c0b638fbe6ded725a46cb5bbf84 by Harald Sitter.
Committed on 07/06/2019 at 12:19.
Pushed by sitter into branch 'Plasma/5.16'.

use errorString instead of errorText

Summary:
the former is for user display, the latter is a sparse variant for
internal use. this results in nicer/useful error messages on errors
CHANGELOG: Error message when failing to save backtraces are more helpful.

Test Plan: - error is a readable string with description instead of only a file path now

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21644

M  +1    -1    src/drkonqi.cpp

https://commits.kde.org/drkonqi/c8f8b9d962eb7c0b638fbe6ded725a46cb5bbf84
Comment 5 Harald Sitter 2019-07-03 12:33:29 UTC
*** Bug 355087 has been marked as a duplicate of this bug. ***